@@ -7,7 +7,7 @@ E-Mountbox
 <p align=50%>
 "The Nicest Mount Epplet Around" (tm). <br>
 <font face=aircut3/12 color=#ffffff>
-Version 0.2
+Version 0.4
 <p align=50%>
 Written by Christian Kreibich - 1999
 <p>
@@ -78,9 +78,14 @@ using the control elements below.
 <page columns=1 padding=16 name=config background=bg.png linkcolor=#88dddd>
 <font face=aircut3/12 color=#ffffff>
 <p>
-You can also make E-Mountbox try to eject media after unmounting. This option
-is available only when the "eject" program is available on your system
-(if not, look at sunsite.unc.edu:/pub/Linux/utils/disk-management).
+E-Mountbox ejects media after unmounting. You can disable this feature in the
+configuration dialog. However, ejecting is available only when the "eject"
+program is available on your system (if not, look at sunsite.unc.edu:/pub/Linux/utils/disk-management).
+<p>
+By default E-Mountbox also polls the mountpoints on your system in regular
+intervals to see if their status has changed and updates its display accordingly.
+You can disable the feature or set the interval length in the configuration
+dialog.
 <p>
 <p>
 <p>
